:bug: Had to tweak z-index of particles because they weren't stacking right with the other elements.

--- a/assets/src/sass/components/_particles.scss
+++ b/assets/src/sass/components/_particles.scss
@@ -7,6 +7,6 @@ canvas {
   height: 100%;
   position: absolute;
   width: 100%;
-  z-index: 1;
+  z-index: 4;
 }
 /* stylelint-enable selector-max-id */
